fixed button spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,7 +14,7 @@
   border: 1px solid #8d8d8d;
   padding: 10px 20px;
   border-radius: 50px;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 .btn-filter {
@@ -25,6 +25,13 @@
   padding: 5px 10px;
   border-radius: 50%;
   font-weight: lighter;
-  opacity: 0.6;
+  opacity: 0.7;
   margin-right: 6px;
+}
+
+.btn-menu {
+  width: 85px;
+  font-size: 20px;
+  background-color: rgb(66,84,95);
+  color: white;
 }
